# palimpsest

./: .gitignore  Cargo.toml  README.md
crates/palimpsest-core/: Cargo.toml
crates/palimpsest-core/src/: lib.rs  nn.rs  patch.rs  scratchpad.rs  span.rs  tensor_util.rs  tokenizer.rs
crates/palimpsest-critic/: Cargo.toml
crates/palimpsest-critic/src/: lib.rs
crates/palimpsest-data/: Cargo.toml
crates/palimpsest-data/src/: ablation.rs  batch.rs  kv_task.rs  lib.rs  vocab.rs
crates/palimpsest-drafter/: Cargo.toml
crates/palimpsest-drafter/src/: lib.rs
crates/palimpsest-editor/: Cargo.toml
crates/palimpsest-editor/src/: lib.rs
crates/palimpsest-router/: Cargo.toml
crates/palimpsest-router/src/: lib.rs
crates/palimpsest-train/: Cargo.toml
crates/palimpsest-train/src/: backend.rs  main.rs  stats.rs
crates/palimpsest-train/src/cmd/: ablate.rs  critic.rs  drafter.rs  editor.rs  mod.rs  router.rs  run_loop.rs
