[package]
name = "palimpsest-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burn = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
