[package]
name = "palimpsest-critic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
palimpsest-core = { workspace = true }
burn = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
