[package]
name = "palimpsest-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
palimpsest-core = { workspace = true }
burn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
